# BrushBound

./: BrushBound  CMakeLists.txt  HowToBuild.txt  glad.c
include/glad/: glad.h
shaders/: basic.frag  basic.vert  ui.frag  ui.vert
src/: Bot.h  BotAI.h  Game.h  Mesh.h  Shader.h  Trail.h  UI.h  Wizard.h  main.cpp
